added parenthesis option password and ability to copy to clipboard

--- a/style.css
+++ b/style.css
@@ -16,3 +16,14 @@ body {
 .checkbox {
     margin: 3%;
 }
+
+.passwordText {
+    display: none;
+    position: absolute;
+    left: -3000px;
+}
+
+.passwordCopy {
+    display: block;
+}
+
